GUI progress, recording working, sentences cleaned

--- a/cloning/testing_playground.ipynb
+++ b/cloning/testing_playground.ipynb
@@ -2,142 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datasets import load_dataset\n"
+    "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13e8addefef64309bebce9d27b850dd2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Resolving data files:   0%|          | 0/100 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading and preparing dataset audiofolder/default to C:/Users/sanso/.cache/huggingface/datasets/audiofolder/default-29add6f2069aa60c/0.0.0/6cbdd16f8688354c63b4e2a36e1585d05de285023ee6443ffd71c4182055c0fc...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b93371d0f10d44878526fa7bbd27a07c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data files:   0%|          | 0/98 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40499c5314d740749cf5511044ed2626",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data files:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9f36cf3e20647e7a6766fd76bc609eb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Extracting data files:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67739e3323af4c56be4ccb2d25b8d43e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating train split: 0 examples [00:00, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset audiofolder downloaded and prepared to C:/Users/sanso/.cache/huggingface/datasets/audiofolder/default-29add6f2069aa60c/0.0.0/6cbdd16f8688354c63b4e2a36e1585d05de285023ee6443ffd71c4182055c0fc. Subsequent calls will reuse this data.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "179bde0be7344583a7c2a66ca665c3db",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dataset = load_dataset(\"audiofolder\", data_dir=\"..\\\\sanso_dataset\\\\joined_audio20230523-194941\")\n"
+    "df = pd.read_csv('validated.tsv', sep='\\t')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'path': 'C:\\\\Users\\\\sanso\\\\Documents\\\\Uni\\\\4t\\\\TFG\\\\sanso_dataset\\\\joined_audio20230523-194941\\\\wavs\\\\1.wav',\n",
-       " 'array': array([-0.05895996, -0.05895996, -0.05859375, ...,  0.00109863,\n",
-       "         0.00109863,  0.00054932]),\n",
-       " 'sampling_rate': 22050}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dataset[\"train\"][\"audio\"][0]"
+    "#Keep only the sentences that have more than 5 words, and only keep the sentence column\n",
+    "df = df[df['sentence'].str.split().str.len() > 5][['sentence']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#if string contains \" remove the sentence\n",
+    "df = df[~df['sentence'].str.contains('\"')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Save the new dataframe to a new file, without index\n",
+    "df.to_csv('validated_cleaned.tsv', sep='\\t', index=False)"
    ]
   }
  ],
