Fixed json encoding problem, optimized imports for all files

--- a/cloning/testing_playground.ipynb
+++ b/cloning/testing_playground.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('validated.tsv', sep='\\t')"
+    "df = pd.read_csv('validated.tsv', sep='\\t', encoding='utf-8')"
    ]
   },
   {
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "#Save the new dataframe to a new file, without index\n",
-    "df.to_csv('validated_cleaned.tsv', sep='\\t', index=False)"
+    "df.to_csv('validated_cleaned.csv', index=False, encoding='utf-8')"
    ]
   }
  ],
