--- a/cloning/testing_playground.ipynb
+++ b/cloning/testing_playground.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "import re\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,22 +32,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "#if string contains \" remove the sentence\n",
-    "df = df[~df['sentence'].str.contains('\"')]"
+    "# df = df[~df['sentence'].str.contains('\"')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Save the new dataframe to a new file, without index\n",
-    "df.to_csv('validated_cleaned.csv', index=False, encoding='utf-8')"
+    "df.to_csv('validated_cleaned_tmp.csv', index=False, encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#regex: starts and ends with '\"' and anything in between\n",
+    "exp = re.compile(r'^\".*\"$')\n",
+    "with open('validated_cleaned_tmp.csv', 'r', encoding='utf-8') as f:\n",
+    "    with open('validated_cleaned.csv', 'w', encoding='utf-8') as f2:\n",
+    "        lines = f.readlines()\n",
+    "        for line in lines:\n",
+    "            if exp.match(line):\n",
+    "                tmp = line[1:-2]\n",
+    "                tmp = tmp.replace('\"\"\"\"', '\"')\n",
+    "                tmp = tmp.replace('\"\"\"', '\"')\n",
+    "                tmp = tmp.replace('\"\"', '\"')\n",
+    "                f2.write(tmp + '\\n')\n",
+    "            else:\n",
+    "                tmp = line.replace('\"\"\"\"', '\"')\n",
+    "                tmp = tmp.replace('\"\"\"', '\"')\n",
+    "                tmp = tmp.replace('\"\"', '\"')\n",
+    "                f2.write(tmp)\n",
+    "os.remove('validated_cleaned_tmp.csv')"
    ]
   }
  ],
